# lms-face-recognition

./: .env.example  .gitignore  .gitlab-ci.yml  main.ipynb  main.py  pyproject.toml  requirements.txt  test-post.lua
src/: app.py  main.py  ws.py
src/config/: database.py
src/model/: face.py
src/router/: face_router.py
src/service/face_service/: get_user_face_dir.py  store_face.py  store_face_service.py  verify_face_service.py
src/utils/: __init__.py  env.py  temp_dir.py
src/websocket/: ws_verify.py
