[project]
name = "lms-facedetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.95",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "tf-keras>=2.15.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
